<resources>
    <string name="app_name">LocationTrackerKotlin</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_text_view">SIGN UP</string>
    <string name="restore_password_text_view">Restore Password</string>
    <string name="sign_in_text_view">SIGN IN</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="password_again_edit_text">Password again</string>
    <string name="sign_in_with_phone">Sign in use phone</string>
    <string name="phone_number_edit_text">Phone number start with "+"</string>
    <string name="verification_code_edit_text">Verification code</string>
    <string name="verify_button_text">Verify</string>
    <string name="resend_text_button">Resend</string>
    <string name="start_button_text">Send</string>
    <string name="restore_password_set_text">Restore password</string>
    <string name="sign_in_set_text">SIGN IN</string>
    <string name="back_text_button">Back</string>
    <string name="continue_text_button">Continue</string>
    <string name="logout_text_button">Logout</string>
    <string name="your_account_text_view">Your Account: </string>
    <string name="account_set_text">Account</string>
    <string name="show_coordinates_menu">Show coordinates</string>
    <string name="show_markers">Show Markers</string>
    <string name="all_permission_granted">Permissions granted</string>
    <string name="permissions_denied_forever">Permissions denied forever</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_forever_message">"You have denied permissions forever. You can change your decision in the app settings.\n\nWould you like to open app settings?"</string>
    <string name="requires_gps">This application requires GPS to work properly, do you want to enable it?</string>
    <string name="calendar">Calendar</string>
    <string name="sign_out_menu">Sign Out</string>
    <string name="exit_menu">Close App</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="show_gps_data">Show GPS Data</string>
    <string name="gps">GPS</string>
    <string name="network">Network</string>
    <string name="reset_password_text_view">Reset Password</string>
    <string name="account_text_view">Account</string>
    <string name="delete_all_in_table">Delete all in table</string>
    <string name="stop_update_gps">Stop update GPS</string>
    <string name="run_update_gps">Run update GPS</string>
</resources>