<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sign_out_menu"
        android:title="@string/sign_out_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/close_app_menu"
        android:title="@string/exit_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_all_data"
        android:title="@string/delete_all_in_table"
        app:showAsAction="never" />

    <item
        android:id="@+id/stop_update_gps"
        android:title="@string/stop_update_gps"
        app:showAsAction="never" />

    <item
        android:id="@+id/run_update_gps"
        android:title="@string/run_update_gps"
        app:showAsAction="never" />

</menu>