<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/phone_auth_common"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/progress_bar_id"
        layout="@layout/progress_bar_common"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/use_phone_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/sign_in_with_phone"
        android:textSize="@dimen/heading_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar_id" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/use_phone_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_edit_text"
            android:inputType="phone"
            android:maxLength="13" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/verification_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sms_code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/verification_code_edit_text"
            android:inputType="numberPassword"
            android:maxLength="6" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:enabled="false"
        android:padding="@dimen/button_padding"
        android:text="@string/start_button_text"
        app:layout_constraintEnd_toStartOf="@id/verify_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verification_input_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verify_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/button_margin"
        android:enabled="false"
        android:padding="@dimen/button_padding"
        android:text="@string/verify_button_text"
        app:layout_constraintEnd_toStartOf="@id/resend_button"
        app:layout_constraintStart_toEndOf="@id/start_button"
        app:layout_constraintTop_toBottomOf="@id/verification_input_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resend_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:enabled="false"
        android:padding="@dimen/button_padding"
        android:text="@string/resend_text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/verify_button"
        app:layout_constraintTop_toBottomOf="@id/verification_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>